[metadata]
name = excel_loader
version = 0.1
description = A Django app to import data from xlsx files.
long_description = file: README.md
url = https://bitbucket.org/inkalabsinc/excel_loader/src/master/
author = Inka Labs
author_email = info@inka-labs.com
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find: